# Pocket_Planetarium

./: .gitignore  CMakeLists.txt  LICENSE  README.md
firmware/: CMakeLists.txt
firmware/assets/: stars.csv
firmware/include/: astro.h  imu.h  stars.h
firmware/src/: astro.c  imu.c  main.c  stars.c
